--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,22 +7,24 @@ version: 2
 
 # Set the OS, Python version, and other tools you might need
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
     python: "3.11"
+    latex: true
 
-# Build documentation in the "docs/" directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+  configuration: docs/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats:
   - pdf
   - epub
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-   install:
-   - requirements: docs/requirements.txt
+  install:
+    - requirements: docs/requirements.txt
+    - path: .
+
+# PDF derleme için LATEXOPTS tanımla
+environment:
+  LATEXOPTS: ""  # Boş veya gerekli argümanlar buraya yazılabilir
