--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,30 +1,14 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
 version: 2
 
-# Set the OS, Python version, and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-    latex: true
+    python: "3.11"  # Use a stable version
 
 sphinx:
   configuration: docs/conf.py
 
-# Optionally build your docs in additional formats such as PDF and ePub
-formats:
-  - pdf
-  - epub
-
 python:
   install:
     - requirements: docs/requirements.txt
-    - path: .
-
-# PDF derleme için LATEXOPTS tanımla
-environment:
-  LATEXOPTS: ""  # Boş veya gerekli argümanlar buraya yazılabilir
+    - path: .  # Install your package: kececinumbers
