--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -46,29 +46,18 @@ jobs:
       - name: Create a clean environment and install dependencies
         run: |
           conda create -n test-env -y python=3.11
-          conda install -n test-env -y \
-            numpy \
-            matplotlib \
-            numpy-quaternion \
-            sympy
-
+          conda install -n test-env -y numpy matplotlib sympy
+          conda run -n test-env pip install numpy-quaternion
+      
       - name: Install the built package into the test environment
         run: |
           PACKAGE_FILE=$(ls dist/*.conda | head -n 1)
           echo "Installing $PACKAGE_FILE"
           conda install -n test-env -y "$PACKAGE_FILE"
-
-      - name: Run final import test and get traceback
-        run: |
-          echo "--- Installing graphillion in test-env via pip ---"
-          conda run -n test-env pip install numpy-quaternion
-          
-          echo "--- Attempting to import kececilayout ---"
-          conda run -n test-env python -c "import kececilayout"
-
+      
       - name: Test the package in the environment
         run: |
-          conda activate test-env && python -c
+          conda run -n test-env python -c
 
       - name: Upload to Anaconda Cloud
         if: github.event_name == 'release' && success()
