--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -56,8 +56,7 @@ jobs:
           conda install -n test-env -y "$PACKAGE_FILE"
       
       - name: Test the package in the environment
-        run: |
-          conda run -n test-env python -c
+        run: conda run -n test-env python -c "import kececinumbers; import numpy; import matplotlib; import numpy_quaternion; import sympy; print('✅ All imports successful!')"
 
       - name: Upload to Anaconda Cloud
         if: github.event_name == 'release' && success()
