--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -63,6 +63,7 @@ jobs:
         env:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
+          conda install -n base -y anaconda-client
           conda run -n base anaconda -t $ANACONDA_TOKEN upload \
             dist/*.conda \
             --label main \
