--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -1,62 +1,55 @@
-name: Build and Test Package-Conda
+name: Build, Test, and Publish Package-Conda
 
 on:
-  workflow_dispatch: # Manuel tetikleme
+  workflow_dispatch:
   release:
-    types: [published] # Yeni release yayınlandığında tetikler
+    types: [published]
 
 jobs:
-  build-and-test:
+  build-publish:
     runs-on: ubuntu-latest
-    
+    # Matrix stratejisini burada tanımlıyoruz
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"] # Hangi Python versiyonları için çalıştırılacak
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Setup Miniconda
+      - name: Setup Miniconda for Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-activate-base: false
-          python-version: "3.11"
+          python-version: "${{ matrix.python-version }}" # Matrix'ten gelen versiyonu kullan
           channels: conda-forge,defaults
           channel-priority: strict
 
       - name: Install Conda-Build
         run: conda install -n base conda-build -y
 
-      - name: Build the package
+      - name: Build the package for Python ${{ matrix.python-version }}
+        # Artık variant config'e ihtiyacımız yok, Python versiyonunu doğrudan belirtiyoruz
         run: |
-          conda build . --output-folder ./conda_pkgs --variant-config-files ./conda_build_config.yaml
-          mkdir -p dist
-          find ./conda_pkgs -name "*.conda" -exec cp {} dist/ \;
+          conda build . --python ${{ matrix.python-version }} --output-folder ./dist
           if [ -z "$(ls -A dist)" ]; then
             echo "HATA: Hiçbir conda paketi oluşturulmadı."
             exit 1
           fi
-          echo "Paketler dist klasörüne kopyalandı:"
+          echo "Oluşturulan paket:"
           ls -l dist
 
-      - name: Upload conda package as artifact
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: conda-package
-          path: dist/
-
-      - name: Create a clean environment and install dependencies
+      - name: Create a test environment
         run: |
-          conda create -n test-env -y python=3.11
+          conda create -n test-env -y python=${{ matrix.python-version }}
           conda install -n test-env -y numpy matplotlib sympy
           conda run -n test-env pip install numpy-quaternion
       
-      - name: Install the built package into the test environment
+      - name: Install and test the built package
         run: |
           PACKAGE_FILE=$(ls dist/*.conda | head -n 1)
-          echo "Installing $PACKAGE_FILE"
           conda install -n test-env -y "$PACKAGE_FILE"
-      
-      - name: Test the package in the environment
-        run: conda run -n test-env python -c "import kececinumbers; import numpy; import matplotlib; import sympy; print('✅ All imports successful!')"
+          conda run -n test-env python -c "import kececinumbers; print('✅ Import successful for Python ${{ matrix.python-version }}!')"
 
       - name: Upload to Anaconda Cloud
         if: github.event_name == 'release' && success()
@@ -71,5 +64,4 @@ jobs:
 
       - name: Cleanup test environment
         if: always()
-        run: |
-          conda env remove -n test-env || echo "test-env zaten kaldırılmış veya yok"
+        run: conda env remove -n test-env || true
