--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,11 @@
-{% set version = "0.4.8" %}
+{% set version = "0.4.9" %}
 
 package:
   name: kececinumbers
   version: {{ version }}
 
 source:
-  url: https://files.pythonhosted.org/packages/62/a7/810842a61d906f70d718ae50dbe357e32e56c70fefdf5c7c44a742a36cad/kececinumbers-0.4.8.tar.gz
-  sha256: dc338c77e71af85dca425cd4a89f4d6088c99af2dd96cf6757f9defa49804037
+  path: .  # Derlemeyi bu meta.yaml dosyasının bulunduğu dizinden yap
   
 channels:
   - conda-forge
