--- a/meta.yaml
+++ b/meta.yaml
@@ -12,7 +12,8 @@ channels:
 
 build:
   noarch: python  # Platformdan bağımsız bir paket oluşturur
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed"
+  #script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed"
+  script: "{{ PYTHON }} -m pip install . -vv"
   number: 0
   entry_points:
     - kececinumbers = kececinumbers.__main__:main
