--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -26,7 +26,7 @@ jobs:
           channel-priority: strict
 
       - name: Install Conda-Build and Conda-Verify
-        run: conda install -n base conda-build conda-verify -y
+        run: conda install -n base conda-build -y
 
       - name: Build the package for Python ${{ matrix.python-version }}
         # Artık variant config'e ihtiyacımız yok, Python versiyonunu doğrudan belirtiyoruz
