--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "numpy",
     "matplotlib",
     "numpy-quaternion",
+    # pip instal numpy-quaternion # conda install -c conda-forge quaternion
     "scipy",
     "sympy",
 ]
@@ -42,6 +43,7 @@ test = [
     "numpy",
     "matplotlib",
     "numpy-quaternion",
+    # pip instal numpy-quaternion # conda install -c conda-forge quaternion
     "scipy",
     "sympy",
 ]
