--- a/meta.yaml
+++ b/meta.yaml
@@ -31,7 +31,6 @@ requirements:
     - numpy
     - matplotlib
     - sympy
-    - numpy
     - quaternion    
     # Other runtime dependencies
   build:
@@ -39,6 +38,9 @@ requirements:
     - pip
     - setuptools
     - numpy
+    - matplotlib
+    - sympy
+    - quaternion
 
 test:
   requires:
