--- a/meta.yaml
+++ b/meta.yaml
@@ -30,8 +30,9 @@ requirements:
     - python >=3.10
     - numpy
     - matplotlib
+    - quaternion
+    - scipy
     - sympy
-    - quaternion    
     # Other runtime dependencies
   build:
     - python >=3.10
@@ -39,8 +40,9 @@ requirements:
     - setuptools
     - numpy
     - matplotlib
-    - sympy
     - quaternion
+    - scipy
+    - sympy
 
 test:
   requires:
