--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,11 @@ dependencies = [
     "scipy",
     "scikit-learn",
     "sympy",
-    "quaternion",
 ]
 
 [project.optional-dependencies]
 quaternion-conda = ["quaternion"]
-test = ["pytest", "pytest-cov", "pytest-mock", "ruff", "numpy", "matplotlib", "quaternion", "scipy", "scikit-learn", "sympy",]
+test = ["pytest", "pytest-cov", "pytest-mock", "ruff", "numpy", "matplotlib", "scipy", "scikit-learn", "sympy",]
 
 all = ["quaternion"]  # Varsayılan conda bağımlılığı
 
