--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,8 @@ package:
 
 source:
   path: .  # Derlemeyi bu meta.yaml dosyasının bulunduğu dizinden yap
-  url: 
-  sha256: 
+  url: https://files.pythonhosted.org/packages/8e/c5/d4b865b08e02cd68ebd9761dad11515fbb1262a8be9a5a25937cf3bf73e4/kececinumbers-0.8.2.tar.gz
+  sha256: db230ae83dbb12a78145cddd355b3978bd30fc25df28efac228d7c4cea975e18
 
 channels:
   - conda-forge
