--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.8.3" %}
+{% set version = "0.8.4" %}
 
 package:
   name: kececinumbers
@@ -6,8 +6,8 @@ package:
 
 source:
   path: .  # Derlemeyi bu meta.yaml dosyasının bulunduğu dizinden yap
-  url: https://files.pythonhosted.org/packages/bd/09/1a3f4bbb317c4da48e52310b8530b3b1ac21ae830e765b7747c70abeccb8/kececinumbers-0.8.3.tar.gz
-  sha256: 2913b22296c1fc4e7b582736bcae389f810df0b48ddecf5efc49d76201f714f7
+  url: 
+  blake2b-256: 
 
 channels:
   - conda-forge
