--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: check-symlinks
       - id: check-xml
       - id: check-yaml
-        exclude: "^(kececilayout/_version.py)$"
+        exclude: "^(kececinumbers/_version.py)$"
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.3
