--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ requires-python = ">=3.11"
 license = { file="LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License-Expression:: AGPL-3.0-or-later",
+    "License :: OSI Approved :: AGPL-3.0",
     "Operating System :: OS Independent",
     "Intended Audience :: Science/Research",
     "Topic :: Scientific/Engineering :: Visualization",
