--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - numpy
     - matplotlib
     - scipy
-    - scikit-learn
+    - sklearn
     - sympy
     # Other runtime dependencies
   build:
